--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>NoPixel Territory Map</title>
+	<title>CTF | Gruppierungsübersicht</title>
 	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:400,100,300,500">
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="fontawesome/css/font-awesome.css">
@@ -23,18 +23,18 @@
 </head>
 <body>
 	<header>
-		<p class="left" style="padding-top: 5px;"><a href="">NoPixel Territory Map</a></p>
+		<p class="left" style="padding-top: 5px;"><a href="">CTF | Gruppierungsübersicht</a></p>
 		<ul class="right">
 			<div class="dropdown">
-				<button class="btn btn-primary" id="toggleruler" onclick="toggleRuler();$(this).css('display', 'none');">Add Distance Ruler</button>
-				<button class="btn btn-primary" id="createzone" onclick="printArray()">Print location array</button>
+				<!--  <button class="btn btn-primary" id="createzone" onclick="printArray()">Print location array</button> -->
 				<button class="btn btn-secondary dropdown-toggle" type="button" id="ddmenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					Select Map Type
+					Map Typ auswählen
 				</button>
 				<div class="dropdown-menu" aria-labelledby="ddmenu">
 					<a href="#" id="Atlas" class="active dropdown-item" onclick="$('#' + map.getMapTypeId()).removeClass('active'); map.setMapTypeId('Atlas'); $(this).addClass('active');">Atlas</a>
 					<a href="#" id="Satellite" class="dropdown-item" onclick="$('#' + map.getMapTypeId()).removeClass('active'); map.setMapTypeId('Satellite'); $(this).addClass('active');">Satellite</a>
-					<a href="#" id="Road" class="dropdown-item" onclick="$('#' + map.getMapTypeId()).removeClass('active'); map.setMapTypeId('Road'); $(this).addClass('active');">Road</a>
+					<a href="#" id="Road" class="dropdown-item" onclick="$('#' + map.getMapTypeId()).removeClass('active'); map.setMapTypeId('Road'); $(this).addClass('active');">Straße</a>
+					<a href="#" id="Postalcode" class="dropdown-item" onclick="$('#' + map.getMapTypeId()).removeClass('active'); map.setMapTypeId('Postalcode'); $(this).addClass('active');">Postal</a>
 				</div>
 			</div>
 
@@ -43,7 +43,7 @@
 
 	<div id="tour-nav"> 
 		<a href="#" class="left">&laquo; <span id="tour-prev"></span></a>
-		<h3>Territory Tour</h3>
+		<h3>Gruppierungen</h3>
 		<a href="#" class="right"><span id="tour-next"></span> &raquo;</a>
 	</div>
 
@@ -116,7 +116,7 @@
 			     	{{/each}}
 					{{#if wiki_link}}
 						<hr>
-						<a target="_blank" href="{{wiki_link}}">See {{title}} on the NoPixel Wiki</a>
+						<a target="_blank" href="{{wiki_link}}">Nur'n test KEKW</a>
 					{{/if}}
 				</div>
 			</div>
